<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.klavergne.mytweetdeck.TweetFragment"
    android:padding="16dp">

    <ImageView
        android:id="@+id/tweetProfilePic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="13dp"
        android:src="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/tweetUserFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tweetProfilePic"
        android:text="@string/sample_fullname" />

    <TextView
        android:id="@+id/tweetUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/sample_username"
        android:layout_alignBottom="@+id/tweetProfilePic"
        android:layout_toEndOf="@+id/tweetProfilePic" />

    <TextView
        android:id="@+id/tweetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tweetProfilePic"
        android:text="@string/sample_tweet"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp" />

    <TextView
        android:id="@+id/tweetDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tweetText"
        android:text="25 Dec 2013 at 14:23"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/tweetRetweetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tweetDateAndTime"
        android:text="@string/sample_retweets_count" />

    <TextView
        android:id="@+id/retweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweetDateAndTime"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/tweetRetweetCount"
        android:text="@string/retweets"/>

    <TextView
        android:id="@+id/tweetFavoritesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:text="@string/sample_favorites_count"
        android:layout_toEndOf="@id/retweets"
        android:layout_alignTop="@+id/retweets" />

    <TextView
        android:id="@+id/favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tweetFavoritesCount"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/tweetFavoritesCount"
        android:text="@string/favorites" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RT"
        android:id="@+id/retweetButton"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/tweetRetweetCount"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAV"
        android:id="@+id/favoriteButton"
        android:layout_alignTop="@+id/retweetButton"
        android:layout_toEndOf="@+id/retweetButton" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAV"
        android:id="@+id/favSwitch"
        android:layout_alignBottom="@+id/favoriteButton"
        android:layout_toEndOf="@id/favoriteButton"
        android:checked="false"
        android:showText="false"
        android:singleLine="false"
        android:splitTrack="false" />
</RelativeLayout>