<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:id="@+id/statusProfilePic"
        android:src="@android:drawable/ic_menu_send"
        android:layout_gravity="top"
        android:contentDescription="@string/profile_pic_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="12sp"
        android:text="@string/sample_fullname"
        android:id="@+id/statusProfileUserFullName"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:layout_toEndOf="@id/statusProfilePic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="12sp"
        android:text="@string/sample_username"
        android:id="@+id/statusProfileUserName"
        android:layout_gravity="start"
        android:textColor="@android:color/secondary_text_dark"
        android:layout_toEndOf="@id/statusProfileUserFullName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sample_time_ago"
        android:id="@+id/tweetHowLongAgo"
        android:layout_alignParentEnd="true"
 />

    <!--
        android:layout_toEndOf="@id/statusProfileUserName"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:textAlignment="gravity"
        android:layout_alignStart="@id/statusProfileUserFullName"


        android:layout_alignEnd="@id/tweetHowLongAgo"
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/sample_tweet"
        android:id="@+id/statusText"
        android:textAlignment="textEnd"
        android:layout_alignStart="@id/statusProfileUserFullName"
        android:layout_below="@id/statusProfileUserFullName" />

</RelativeLayout>